fixed overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,6 @@ body {
   justify-content: space-between;
   align-items: center;
   padding-left: 10px;
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
